[package]
name = "scriptbench"
version = "0.1.0"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
edition = "2018"

[dependencies]
rhai = "0.20.1"
dyon = { version = "0.46.0", features = [] }
hlua = "0.4.1"
rlua = "0.17.0"
purua = "0.0.2"
combine = "4.5.2"
koto = "0.7.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false
