[package]
name = "scriptbench"
version = "0.1.0"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
edition = "2018"

[dependencies]
rhai = "0.20.1"
dyon = { version = "0.46.0", features = [] }
hlua = "0.4.1"
rlua = "0.17.0"
purua = "0.0.2"
combine = "4.5.2"
koto = "0.7.0"
deno_core = "0.94.0"
# gluon currently doesn't work on nightly (which I use) because the ArcType type is 40 instead of
# 48 bytes. I patched it by commenting out base/type/mod.rs#1042.
gluon = { path = "../gluon" }

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false
